# Anchor-annotator

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  rtd_environment.yml  rtd_requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml
anchor/: __init__.py  __main__.py  command_line.py  corpus_manager.ui  db.py  error_dialog.ui  main.py  main_window.ui  models.py  plot.py  preferences.ui  resources.qrc  resources_rc.py  settings.py  title_screen.ui  ui_corpus_manager.py  ui_error_dialog.py  ui_main_window.py  ui_preferences.py  undo.py  widgets.py  workers.py
anchor/resources/icons/anchor_dark/: index.theme
anchor/resources/icons/anchor_light/: index.theme
docs/source/: conf.py  getting_started.rst  index.rst  installation.rst
docs/source/_static/css/: style.css
docs/source/changelog/: index.rst
docs/source/first_steps/: example.rst  examples.rst  index.rst
docs/source/reference/: index.rst
docs/source/user_guide/: basic_navigation.rst  configuration.rst  diarization.rst  dictionary.rst  index.rst  key_bindings.rst  known_issues.rst  oovs.rst  speakers.rst  utterances.rst
utility/: create_colored_icons.py
