[build-system]
requires = [
    "setuptools>=45", "wheel", "setuptools_scm>=6.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "anchor/_version.py"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
profile = "black"
known_first_party = [
    "anchor"
]

[tool.flake8]
max-line-length = 130
exclude = [".git", "__pycache__", "dist"]
