[metadata]
name = Anchor_annotator
description = Anchor annotator is a program for inspecting corpora for the Montreal Forced Aligner and correcting transcriptions and pronunciations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MontrealCorpusTools/Anchor-annotator
author = Montreal Corpus Tools
author_email = michael.e.mcauliffe@gmail.com
maintainer = Michael McAuliffe
maintainer_email = michael.e.mcauliffe@gmail.com
license = MIT
license_file = LICENSE
classifiers = Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Sound/Audio :: Speech
    Topic :: Scientific/Engineering
    Topic :: Text Processing :: Linguistic
keywords = phonology
    corpus
    phonetics
    annotation
licence_file = LICENSE

[options]
packages = find:
install_requires =
    montreal-forced-aligner
    pyqtgraph
    pyside6
python_requires = >=3.8
include_package_data = True

[options.packages.find]
exclude = tests

[options.package_data]
* = *.yaml

[tool:pytest]
testpaths = tests
norecursedirs = data

[tool:flake8]
max-line-length = 130
exclude = [".git", "__pycache__", "dist"]
